<resources>
    <string name="app_name">Generations Challenge</string>
    <string name="loginTitle">Bienvenue</string>
    <string name="loginRegister">Pas encore de comptes ? Inscrivez vous ICI</string>
    <string name="connection">Connexion</string>
    <string name="register">S\'inscrire</string>
    <string name="registerTitle">Inscription</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom de famille</string>
    <string name="mail">Email</string>
    <string name="username">Surnom</string>
    <string name="password">Mot de passe</string>
    <string name="passwordconfirmed">Cofirmation du mot de passe</string>
    <string name="poste">Poste</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profil</string>
    <string name="title_notifications">Notifications</string>
    <string name="profilTextTeam">Mon équipe</string>
    <string name="profilTextNextMatch">Mon prochain match</string>
    <string name="profilTextLastMatch">Mon dernier match</string>
    <string name="allScorers">Tout les buteurs</string>
    <string name="myProfil">Mon profil</string>
    <string name="registerTeamText">Infos d\'équipe</string>
    <string name="selectPhoto">Séléctionnez une photo</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="teams">Les équipes</string>
    <string name="classementScorer">Les buteurs</string>
    <string name="classement">Classements</string>
    <string name="calendar">Calendrier</string>
    <string name="calendarResults">Calendrier et Résultats</string>
    <string name="teamCalendar">Calendrier par équipe</string>
    <string name="results">Resultats</string>
    <string name="season">Saison 2017-2018</string>
    <string name="infos">Infos</string>
    <string name="staff">Le Staff</string>
    <string name="rules">Réglement du championnat</string>
    <string name="contact">Contact</string>
    <string name="nextMatch">Prochain match</string>
    <string name="goalScored">Buts marqués</string>
    <string name="register1Title">Qui êtes vous ?</string>
    <string name="register1Joueur">Un joueur ou un capitaine ?</string>
    <string name="register1Invite">Un invité, supporter ou espion ?</string>
    <string name="register2Title">Que voulez-vous ?</string>
    <string name="register2Team">Inscrire votre équipe ?</string>
    <string name="register2Joueur">Vous inscrire ?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_logged">Vous devez vous connecter pour avoir accès à ces informations</string>


</resources>
