<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_profile"
            android:title="@string/myProfil" />
    </group>

    <item android:title="@string/season">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_teams"
                    android:icon="@drawable/menu_team"
                    android:title="@string/teams" />
                <item
                    android:id="@+id/nav_season"
                    android:icon="@drawable/menu_calendrier"
                    android:title="@string/calendarResults" />
                <item
                    android:id="@+id/nav_classement"
                    android:icon="@drawable/menu_classement"
                    android:title="@string/classement" />
                <item
                    android:id="@+id/nav_scorers"
                    android:icon="@drawable/menu_buteur"
                    android:title="@string/classementScorer" />
            </group>
        </menu>
    </item>

    <item android:title="@string/infos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_rules"
                    android:icon="@drawable/menu_reglement"
                    android:title="@string/rules" />
                <item
                    android:id="@+id/nav_staff"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/staff" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/menu_contact"
                    android:title="@string/contact" />

            </group>
        </menu>
    </item>


</menu>
