<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="com.example.bacar.generationschallenge.Controller.Authentification.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/loginscreen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Login Screen"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_margin="15dp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="81dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/loginscreen_title">

            <EditText
                android:id="@+id/login_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="178dp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/input_layout_login_name">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="234dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_below="@+id/input_layout_login_pass"
            android:text="@string/connection"
            tools:layout_editor_absoluteY="300dp"
            tools:layout_editor_absoluteX="148dp" />

        <TextView
            android:id="@+id/loginscreen_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_below="@+id/login_button"
            android:textColor="@color/white"
            android:text="Not registered yet ? Sign In HERE"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="367dp" />

    </RelativeLayout>

</LinearLayout>